<resources>
    <string name="app_name">Student app</string>

    <!--CLASSES STRINGS-->
    <string name="title_classes">Classes</string>
    <string name="add_class">Add Class</string>

    <!--STOPWATCH STRINGS-->
    <string name="title_stopwatch">Stopwatch</string>
    <string name="start_watch">Start</string>
    <string name="stop_watch">Stop</string>

    <string name="title_insights">Insights</string>


    <!--TIMETABLE STRINGS-->
    <string name="title_timetable">Timetable</string>


    <string name="app_title">App Title</string>
    <string name="title">Title:</string>
    <string name="due">Due:</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="new_event">New Event</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="name">Name:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="clazz">Class:</string>
    <string name="weekly">weekly</string>
    <string name="current_semester">Current Semester:</string>
    <string name="add_new_semester">Add new Semester</string>
    <string name="manage_semester">Manage Semester</string>
    <string name="color">Color:</string>
    <string name="assignments">Assignments</string>
    <string name="week">Week</string>
    <string name="assignment_edit">Assignment Edit</string>
    <string name="class_edit">Class Edit</string>
    <string name="event_edit">Event Edit</string>
    <string name="day">Day</string>
    <string name="go_to_fragment">Go to Fragment</string>
    <string name="overview">Overview</string>
    <string name="calendar_view">Calendar View</string>
    <string name="grades">Grades</string>
    <string name="grade">Grade:</string>
    <string name="weight">Weight:</string>
    <string name="add_grade">Add Grade</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="room">Room: </string>
    <string name="ects">ECTS</string>
    <string name="passed">passed</string>
    <string name="type">Type</string>

    <string name="msg_token_fmt">FCM registration token: %s</string>

</resources>