<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="20dp">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/current_semester"
            android:textAlignment="textEnd" />

        <Spinner
            android:id="@+id/semester_spinner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="textStart" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20sp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>
        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:ems="10"
            android:inputType="text"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:id="@+id/date_from"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="12.5.2005"
            android:textAlignment="textEnd" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="-"
            android:textAlignment="center" />

        <TextView
            android:layout_width="0dp"
            android:id="@+id/date_to"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="12.5.2006"
            android:textAlignment="textStart" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:iconTint="?android:attr/textColorPrimary"
            app:icon="@drawable/trash_icon"
            android:background="@color/transparent"
            android:text="@string/delete"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_gravity="center" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider"
            android:layout_marginHorizontal="20dp"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:iconTint="?android:attr/textColorPrimary"
            app:icon="@drawable/save_icon"
            android:background="@color/transparent"
            android:text="@string/save"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_gravity="center"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textColor="?android:attr/textColorPrimary"
        app:iconTint="?android:attr/textColorPrimary"
        app:icon="@drawable/plus_icon"
        android:background="@color/transparent"
        android:text="@string/add_new_semester" />

</LinearLayout>